--- a/index.html
+++ b/index.html
@@ -1,135 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Shopping Site</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        .cart-badge {
-            background-color: red;
-            border-radius: 50%;
-            padding: 2px 8px;
-            color: white;
-            font-weight: bold;
-        }
-        .btn:hover {
-            background-color: #007bff;
-            color: white;
-            transform: scale(1.05);
-        }
-        .card {
-            transition: transform 0.3s ease-in-out;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-        }
-    </style>
-</head>
-<body>
-    <header class="bg-dark text-white p-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <h1>My Shop</h1>
-            <div class="input-group w-50">
-                <input type="text" class="form-control" placeholder="Search products..." id="search-bar">
-                <button class="btn btn-primary" onclick="searchProducts()">Search</button>
-            </div>
-            <nav>
-                <a href="#" class="text-white me-3">Home</a>
-                <a href="#" class="text-white me-3">Products</a>
-                <a href="#" class="cart text-white">Cart <span id="cart-count" class="cart-badge">0</span></a>
-            </nav>
-        </div>
-    </header>
-
-    <main class="container my-5">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card product-card">
-                    <img src="public/laptop.jpg" class="card-img-top" alt="Laptop">
-                    <div class="card-body">
-                        <h5 class="card-title">Laptop</h5>
-                        <p class="card-text">$999.99</p>
-                        <button class="btn btn-success">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card product-card">
-                    <img src="public/smartphone.jpg" class="card-img-top" alt="Smartphone">
-                    <div class="card-body">
-                        <h5 class="card-title">Smartphone</h5>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-success">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card product-card">
-                    <img src="public/headphones.jpg" class="card-img-top" alt="Headphones">
-                    <div class="card-body">
-                        <h5 class="card-title">Headphones</h5>
-                        <p class="card-text">$199.99</p>
-                        <button class="btn btn-success">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h2 class="my-5">Recommended Products</h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="public/headphones.jpg" class="card-img-top" alt="Wireless Headphones">
-                    <div class="card-body">
-                        <h5 class="card-title">Wireless Headphones</h5>
-                        <p class="card-text">$150.00</p>
-                        <button class="btn btn-success">View More</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="public/smartwatch.jpg" class="card-img-top" alt="Smartwatch">
-                    <div class="card-body">
-                        <h5 class="card-title">Smartwatch</h5>
-                        <p class="card-text">$250.00</p>
-                        <button class="btn btn-success">View More</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <section class="bg-primary text-white p-4">
-        <div class="container">
-            <h3>Subscribe to our Newsletter</h3>
-            <form class="d-flex">
-                <input type="email" class="form-control me-2" placeholder="Enter your email" required>
-                <button type="submit" class="btn btn-light">Subscribe</button>
-            </form>
-        </div>
-    </section>
-
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 My Shop. All Rights Reserved.</p>
-        <div class="social-icons">
-            <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i> Facebook</a>
-            <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="#" class="text-white"><i class="fab fa-instagram"></i> Instagram</a>
-        </div>
-    </footer>
-
-    <script>
-        function searchProducts() {
-            const searchTerm = document.getElementById('search-bar').value.toLowerCase();
-            const productCards = document.querySelectorAll('.product-card');
-            productCards.forEach(card => {
-                const productName = card.querySelector('.card-title').textContent.toLowerCase();
-                card.style.display = productName.includes(searchTerm) ? '' : 'none';
-            });
-        }
-    </script>
-</body>
-</html>
+<link rel="stylesheet" href="styles.css">
+<script src="script.js"></script>
