--- a/index.html
+++ b/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Shopping Site</title>
+    <title>متجري الإلكتروني</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- شريط التنقل -->
     <header>
-        <div class="logo">MyShop</div>
+        <div class="logo">متجري الإلكتروني</div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <ul>
+                <li><a href="#home">الرئيسية</a></li>
+                <li><a href="#shop">المنتجات</a></li>
+                <li><a href="#contact">اتصل بنا</a></li>
+            </ul>
         </nav>
     </header>
-    
-    <section class="hero">
-        <h1>Discover Amazing Products</h1>
-        <p>Explore the latest trends at unbeatable prices!</p>
-        <button onclick="window.location.href='#products'">Shop Now</button>
-    </section>
-    
-    <section id="products">
-        <h2>Featured Products</h2>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="images/laptop.jpg" alt="Laptop">
-                <h3>Laptop</h3>
-                <p>$999.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images/smartphone.jpg" alt="Smartphone">
-                <h3>Smartphone</h3>
-                <p>$499.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images/headphones.jpg" alt="Headphones">
-                <h3>Headphones</h3>
-                <p>$199.99</p>
-                <button>Add to Cart</button>
-            </div>
+
+    <!-- قسم المنتجات -->
+    <section id="shop" class="products">
+        <h2>منتجاتنا</h2>
+        <div class="product">
+            <img src="product1.jpg" alt="منتج 1">
+            <h3>منتج 1</h3>
+            <p>وصف المنتج 1.</p>
+            <button onclick="addToCart('منتج 1')">إضافة إلى العربة</button>
+        </div>
+        <div class="product">
+            <img src="product2.jpg" alt="منتج 2">
+            <h3>منتج 2</h3>
+            <p>وصف المنتج 2.</p>
+            <button onclick="addToCart('منتج 2')">إضافة إلى العربة</button>
         </div>
     </section>
 
+    <!-- سلة التسوق -->
+    <section id="cart">
+        <h2>سلة التسوق</h2>
+        <ul id="cartItems"></ul>
+        <button id="checkoutButton">الدفع</button>
+    </section>
+
     <footer>
-        <p>&copy; 2025 MyShop. All rights reserved.</p>
+        <p>© 2025 متجري الإلكتروني</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
