--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
     <script src="scripts.js"></script>
 <a href="pages/user-register.html">تسجيل كمستخدم</a>
 <a href="pages/merchant-register.html">تسجيل كتاجر</a>
+<form id="userRegisterForm" action="" method="POST">
+    <label for="username">اسم المستخدم:</label>
+    <input type="text" id="username" name="username" placeholder="أدخل اسمك" required>
 
+    <label for="email">البريد الإلكتروني:</label>
+    <input type="email" id="email" name="email" placeholder="example@example.com" required>
+
+    <label for="password">كلمة المرور:</label>
+    <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
+
+    <button type="submit">تسجيل</button>
+</form>
+
+    
     </body>
 </html>
