--- a/index.html
+++ b/index.html
@@ -3,54 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>متجري الإلكتروني</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>تسجيل حساب</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>متجري الإلكتروني</h1>
-        <nav>
-            <a href="#shop">المنتجات</a>
-            <a href="#cart">سلة التسوق</a>
-        </nav>
+        <h1>مرحبًا بك في متجرنا!</h1>
+        <p>قم بإنشاء حساب للاستمتاع بمزايا متجرنا.</p>
     </header>
 
-    <section id="shop">
-        <h2>منتجاتنا</h2>
-        <div class="product" data-id="1" data-price="100">
-            <h3>منتج 1</h3>
-            <p>السعر: 100 ريال</p>
-            <button onclick="addToCart(1, 'منتج 1', 100)">إضافة إلى السلة</button>
-        </div>
-        <div class="product" data-id="2" data-price="200">
-            <h3>منتج 2</h3>
-            <p>السعر: 200 ريال</p>
-            <button onclick="addToCart(2, 'منتج 2', 200)">إضافة إلى السلة</button>
-        </div>
-    </section>
+    <main>
+        <section id="register-form">
+            <h2>إنشاء حساب</h2>
+            <form id="userRegisterForm">
+                <label for="username"><i class="fas fa-user"></i> اسم المستخدم:</label>
+                <input type="text" id="username" name="username" placeholder="أدخل اسم المستخدم" required>
 
-    <section id="cart">
-        <h2>سلة التسوق</h2>
-        <ul id="cartItems"></ul>
-        <p id="totalPrice">إجمالي السعر: 0 ريال</p>
-    </section>
+                <label for="email"><i class="fas fa-envelope"></i> البريد الإلكتروني:</label>
+                <input type="email" id="email" name="email" placeholder="البريد الإلكتروني" required>
 
-    <script src="scripts.js"></script>
-<a href="pages/user-register.html">تسجيل كمستخدم</a>
-<a href="pages/merchant-register.html">تسجيل كتاجر</a>
-<form id="userRegisterForm" action="" method="POST">
-    <label for="username">اسم المستخدم:</label>
-    <input type="text" id="username" name="username" placeholder="أدخل اسمك" required>
+                <label for="password"><i class="fas fa-lock"></i> كلمة المرور:</label>
+                <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
 
-    <label for="email">البريد الإلكتروني:</label>
-    <input type="email" id="email" name="email" placeholder="example@example.com" required>
+                <button type="submit">تسجيل</button>
+            </form>
+        </section>
+    </main>
 
-    <label for="password">كلمة المرور:</label>
-    <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
+    <footer>
+        <p>© 2025 متجرنا - كل الحقوق محفوظة</p>
+    </footer>
 
-    <button type="submit">تسجيل</button>
-</form>
-
-    
-    </body>
+    <script src="../js/auth.js"></script>
+</body>
 </html>
