--- a/index.html
+++ b/index.html
@@ -3,47 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل حساب</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>نتائج مباريات كرة القدم</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>مرحبًا بك في متجرنا!</h1>
-            <p>قم بإنشاء حساب للاستمتاع بمزايا متجرنا.</p>
-        </div>
+        <h1>نتائج مباريات كرة القدم</h1>
     </header>
-
     <main>
-        <section id="register-form">
-            <h2>إنشاء حساب</h2>
-            <form id="userRegisterForm">
-                <div class="input-group">
-                    <label for="username"><i class="fas fa-user"></i> اسم المستخدم:</label>
-                    <input type="text" id="username" name="username" placeholder="أدخل اسم المستخدم" required>
-                </div>
-
-                <div class="input-group">
-                    <label for="email"><i class="fas fa-envelope"></i> البريد الإلكتروني:</label>
-                    <input type="email" id="email" name="email" placeholder="البريد الإلكتروني" required>
-                </div>
-
-                <div class="input-group">
-                    <label for="password"><i class="fas fa-lock"></i> كلمة المرور:</label>
-                    <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
-                </div>
-
-                <button type="submit">تسجيل</button>
-            </form>
+        <section id="matches">
+            <h2>المباريات الحالية</h2>
+            <div id="results"></div>
         </section>
     </main>
-
-    <footer>
-        <p>© 2025 متجرنا - جميع الحقوق محفوظة</p>
-    </footer>
-
-    <script src="../js/auth.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
