--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
         </section>
     </main>
     <script src="script.js"></script>
+    <nav>
+    <ul>
+        <li><a href="#home">الرئيسية</a></li>
+        <li><a href="#matches">المباريات</a></li>
+        <li><a href="#contact">اتصل بنا</a></li>
+    </ul>
+</nav>
+<div class="search-bar">
+    <input type="text" id="searchInput" placeholder="ابحث عن فريق أو مباراة...">
+</div>
 </body>
 </html>
