--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     </footer>
 
     <script src="script.js"></script>
+    <section id="matches">
+    <h2>آخر المباريات</h2>
+    <div id="results" class="scrollable-results"></div>
+</section>
 </body>
 </html>
