--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="matches">
         <h2>آخر المباريات</h2>
-        <div id="results"></div> <!-- سيتم عرض النتائج هنا -->
+        <div id="results" class="results-container"></div> <!-- سيتم عرض النتائج هنا -->
     </section>
 
     <footer>
@@ -28,9 +28,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <section id="matches">
-    <h2>آخر المباريات</h2>
-    <div id="results" class="scrollable-results"></div>
-</section>
 </body>
 </html>
